--- a/desktop-fonts/symbols-nerd-font/autobuild/build
+++ b/desktop-fonts/symbols-nerd-font/autobuild/build
@@ -1,2 +1,13 @@
 abinfo "Installing Symbols Nerd Font ..."
 install -Dvm644 -t "$PKGDIR"/usr/share/fonts/TTF "$SRCDIR"/*.ttf
+
+abinfo "Installing fontconfig file for Nerd Font"
+install -Dvm644 \
+  "$SRCDIR"/symbols-nerd-font-3.2.1-1.conf \
+  "$PKGDIR"/etc/fonts/conf.avail/10-nerd-font-symbols.conf
+
+abinfo "Enabling fontconfig file for Nerd Font"
+mkdir -v -p "$PKGDIR"/etc/fonts/conf.d
+ln -v -s -t \
+  "$PKGDIR"/etc/fonts/conf.d \
+  /etc/fonts/conf.avail/10-nerd-font-symbols.conf
