xray: add v2ray-rules-dat dependency

--- a/app-network/xray/autobuild/build
+++ b/app-network/xray/autobuild/build
@@ -4,3 +4,8 @@ go build -o xray -ldflags "-s -w -buildid=" "$SRCDIR"/main
 abinfo "Installing xray ..."
 install -Dvm755 "$SRCDIR"/xray -t "$PKGDIR"/usr/bin/
 install -dv "$PKGDIR"/etc/xray
+install -dv "$PKGDIR"/usr/share/xray
+
+abinfo "Linking to geofile directory ..."
+ln -sv /usr/share/v2ray-rules-dat/{geoip.dat,geosite.dat} \
+    "$PKGDIR"/usr/share/xray
